# cpp-rapidjson-json-adapter

./: .appveyor.yml  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  conanfile.py  conanfile.txt
.github/workflows/: archive-docs.yml
ci/pipelines/: Build.jenkinsfile  Release.jenkinsfile
src/: CMakeLists.txt
src/RapidJSONAdapter/: CMakeLists.txt  JSONAdapter.cpp  JSONAdapter.h  JSONDocument.cpp  JSONDocument.h  JSONMember.cpp  JSONMember.h  JSONSchemaValidator.cpp  JSONSchemaValidator.h  JSONValue.cpp  JSONValue.h
src/cpp-rapidjson-json-adapter/: JSONAdapter.cpp  JSONAdapter.h  JSONDocument.cpp  JSONDocument.h  JSONMember.cpp  JSONMember.h  JSONSchemaValidator.cpp  JSONSchemaValidator.h  JSONValue.cpp  JSONValue.h
test/RapidJSONAdapterTest/: CMakeLists.txt  RapidJSONAdapterTest.cpp  stdafx.h
test/RapidJSONAdapterTest/Tests/: JSONDocumentCopyTest.cpp  JSONDocumentErrorsTest.cpp  JSONDocumentExceptionsTest.cpp  JSONDocumentParseTest.cpp  JSONDocumentSerializeTest.cpp  JSONPointerTest.cpp  JSONRemoteSchemaValidationTest.cpp  JSONSchemaValidationTest.cpp  JSONValueRemoveTest.cpp
test/TestUtilities/JSONAdapterTestUtilities/: CMakeLists.txt
test/TestUtilities/JSONAdapterTestUtilities/Comparators/: JSONDocumentComparator.cpp
test/TestUtilities/JSONAdapterTestUtilities/Mocks/: MockJSONAdapter.h
test_package/: CMakeLists.txt  RapidJSONAdapterExample.cpp  conanfile.py
