# configure cpp-rapidjson-json-adapter as library
set(CPP_RAPIDJSON_ADAPTER cpp-rapidjson-json-adapter)
file(GLOB_RECURSE CPP_RAPIDJSON_ADAPTER_SRC "${CPP_RAPIDJSON_ADAPTER}/*.cpp")
file(GLOB_RECURSE CPP_RAPIDJSON_ADAPTER_HDR "${CPP_RAPIDJSON_ADAPTER}/*.h")
add_library(${CPP_RAPIDJSON_ADAPTER} STATIC ${CPP_RAPIDJSON_ADAPTER_SRC} ${CPP_RAPIDJSON_ADAPTER_HDR})
